# data_structure

./: .gitignore  Makefile.am  Makefile.in  README  autogen.sh  autolib.sh  config.h  configure.ac  run_test.sh
project/kdl/: velocityprofile_trap.cpp  velocityprofile_trap.hpp
project/week2/: polynomial_calc.c  polynomial_calc.h
testcode/: main.cpp  test_simu_plan.cpp
testcode/week2/: test_polynomial_calc.cpp
